--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
     </scm>
     <dependencies>
         <dependency>
+            <groupId>com.apifan.common</groupId>
+            <artifactId>common-random</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>29.0-jre</version>
